--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-29  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Avoid failure when copying a null vector.
+	* src/util.cc: Add safety check.
+
 2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Remove useless uBlas io.hpp include.
