--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-30  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Re-enable gcov support in plug-in.
+	* src/Makefile.am: Here.
+
 2009-07-29  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Avoid failure when copying a null vector.
