--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+2009-08-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add dllexport/dllimport for Windows compatibility.
+	* include/Makefile.am,
+	* include/roboptim/core/constant-function.hh,
+	* include/roboptim/core/debug.hh,
+	* include/roboptim/core/derivable-function.hh,
+	* include/roboptim/core/finite-difference-gradient.hh,
+	* include/roboptim/core/function.hh,
+	* include/roboptim/core/generic-solver.hh,
+	* include/roboptim/core/identity-function.hh,
+	* include/roboptim/core/indent.hh,
+	* include/roboptim/core/io.hh,
+	* include/roboptim/core/linear-function.hh,
+	* include/roboptim/core/numeric-linear-function.hh,
+	* include/roboptim/core/numeric-quadratic-function.hh,
+	* include/roboptim/core/portability.hh,ew.
+	* include/roboptim/core/quadratic-function.hh,
+	* include/roboptim/core/result-with-warnings.hh,
+	* include/roboptim/core/result.hh,
+	* include/roboptim/core/solver-error.hh,
+	* include/roboptim/core/solver-warning.hh,
+	* include/roboptim/core/sys.hh,
+	* include/roboptim/core/twice-derivable-function.hh: Here.
+
 2009-08-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add new variant of foreach method.
