Add ROBOPTIM_DLLAPI to ensure Windows portability.
	* include/roboptim/core/util.hh: Add missing qualifier.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add ROBOPTIM_DLLAPI to ensure Windows portability.
+	* include/roboptim/core/util.hh: Add missing qualifier.
+
 2009-08-16  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix comment.
