Add Francois Keith to thanks file.
	* AUTHORS: Update.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,9 @@ This package was written by and with the assistance of
 * Florent Lamiraux              florent@laas.fr
 - Interface design.
 
+* François Keith                francois.keith@gmail.com
+- Microsoft Windows / Microsoft Visual Studio support.
+
 * Thomas Moulard                thomas.moulard@gmail.com
 - Package creation.
 - Interface implementation.
