--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-08-30  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add Francois Keith to thanks file.
+	* AUTHORS: Update.
+
+2009-08-30  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Enhance Microsoft Visual Studio solution and projects.
 	Introduce new installation rules and add Visual Studio
 	properties for Boost support. Compile in debug and release
