--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Update Doxygen generation rules.
+	* .gitmodules: Remove doc submodule.
+	* build-aux: Update to new version.
+	* doc/Doxyfile.extra: New.
+	* doc/Makefile.am: New.
+	* doc: Remove.
+
 2009-08-31  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add policies to finite-difference gradients computation.
