--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Synchronize build-aux.
+	* build-aux: Here.
+
+2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Synchronize with build-aux.
 	* build-aux: Here.
 
