Add URL information.
	* configure.ac: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add URL information.
+	* configure.ac: Here.
+
+2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix version files generation.
 	* Makefile.am: Do no generate ``.version'' in a tarball (as
 	user might not have control on source directory, for instance
