--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Remove obsolete information from README.
+	* README: Here.
+
+2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add URL information.
 	* configure.ac: Here.
 
