--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Synchronize.
+	* build-aux: Synchronize.
+
+2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Update NEWS file.
 	* NEWS: Here.
 
