--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-03  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Synchronize.
+	* build-aux: Here.
+
 2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Synchronize.
