--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Reorganize configure.ac.
+	* configure.ac: Change macro order to enhance consistency.
+
 2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Synchronize.
