--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Distribute Windows related files.
+	Reported by François Keith.
+	* Makefile.am: Here.
+
 2009-10-23  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Handle symbol visibility under Linux.
