--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Synchronize.
+	* build-aux: Synchronize.
+
 2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add ``this->'' in template code to help the compiler.
