--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-06  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add ROBOPTIM_DLLLOCAL when needed.
+	* src/finite-difference-gradient.cc: Here.
+
 2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Synchronize.
