--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add rpm support.
+	* Makefile.am: Include rpm generation rule.
+	* build-aux: Synchronize.
+
+2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix spec file.
 	* build-aux: Synchronize.
 	* roboptim-core.spec.in: Fix description and rules.
