--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2009-11-12  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix spec file.
+	* roboptim-core.spec.in: Package all documentation
+	in documentation package.
+
+2009-11-12  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix spec file.
 	* roboptim-core.spec.in: Here.
 
 2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>
