--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Synchronize.
+	* build-aux: Here.
+
+2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Update NEWS.
 	* NEWS: Fill 0.4 release information.
 
