--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Fix rpm spec file.
+	* roboptim-core.spec.in: Remove ``.la'' file of the plug-in.
+
+2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix rpm build requirements.
 	* roboptim-core.spec.in: Here.
 
