--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-01-14  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add ChangeLog information to spec file.
+	* roboptim-core.spec.in: Add ChangeLog information.
+
+2010-01-14  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix RPM spec file.
 	* roboptim-core.spec.in: Here.
 
