--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,11 @@
 	Synchronize.
 	* build-aux: Synchronize.
 
+2010-03-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Synchronize.
+	* build-aux: Synchronize.
+
 2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add Split filter.
