Update MSVC project.
	* msvc/roboptim-core/roboptim-core.vcproj:
	Add ``solver.cc'' to files list.
        Reported by François Keith.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

Conflicts:

	ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-03-21  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Update MSVC project.
+	* msvc/roboptim-core/roboptim-core.vcproj:
+	Add ``solver.cc'' to files list.
+	Reported by François Keith.
+
 2010-03-08  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Synchronize.
