Add a class for scalar functions that are the sum of squares of scalar functions
    Class SumOfC1Squares represents the sum of differentiable scalar functions.
    This class enables to define non-linear least square problems.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
                                                                 -*- outline -*-
+* Add support for nonlinear least-square problems.
 
 New in 0.4, 2009-11-16:
 * Make plug-in loading more robust.
