--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+roboptim-core (2.0-2) unstable; urgency=low
+
+  * Fix compilation on 32-bits architecture.
+
+ -- Thomas Moulard <thomas.moulard@gmail.com>  Mon, 20 May 2013 11:47:44 +0900
+
 roboptim-core (2.0-1) unstable; urgency=low
 
   * Initial release (Closes: #705014)
