Improve watch file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ roboptim-core (2.0-5) unstable; urgency=low
 
   * Update symbols for alpha and s390x.
   * Fix plugindir location for multiarch.
+  * Improved watch file by Bart Martens <bartm@debian.org>.
 
  -- Thomas Moulard <thomas.moulard@gmail.com>  Mon, 10 Jun 2013 10:28:35 +0900
 
