--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,13 @@
 This package was written by and with the assistance of
 
-* Antonio El Khoury             antonio.elkhoury@gmail.com
-- Non-scalar constraints support.
+* Stanislas Brossette           stanislas.brossette@gmail.com
+- Polynomial function.
 
 * Benjamin Chrétien             chretien@lirmm.fr
 - Solver error reporting enhancement.
+
+* Antonio El Khoury             antonio.elkhoury@gmail.com
+- Non-scalar constraints support.
 
 * Florent Lamiraux              florent@laas.fr
 - Interface design.
