AUTHORS: add Ko Ayusawa

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,8 @@
 This package was written by and with the assistance of
 
+* Ko Ayusawa                    k.ayusawa@aist.go.jp
+- Windows (Intel compiler) portage
+
 * Stanislas Brossette           stanislas.brossette@gmail.com
 - Polynomial function.
 
