--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,28 @@
                                                                 -*- outline -*-
 
+New in 3.1, 2015-06-27
+* ColMajor/RowMajor support has been improved (cf. #89). Default is back to
+  ColMajor since this is Eigen's default mode, but that can be changed with a
+  CMake variable.
+* Allocation checking has been improved (cf. #92).
+* Multiplots are now available with the matplotlib plotting backend (cf. #94).
+* Added vector_t and bool to the solver parameter types. As a consequence,
+  std::string parameters should not rely on automatic conversion from const
+  char* (cf. 7a0bbb74c60dd21a9f467a20fe02df67c2dd689f). Basically:
+
+  // This will be converted to bool:
+  parameters["key"].value = "value";
+  // While this will be a string:
+  parameters["key"].value = std::string ("value");
+
+* Renamed scale[s]* to scaling* (cf. 434559c940f0866724c24bc32921ee8adfcb005f).
+  Previous methods/typedefs are currently kept for backward compatibility, but
+  marked as deprecated.
+* Add new StructuredInput helper (cf. #96).
+* Add support for matrix plotting with matplotlib (cf.
+  5abd27ec5e4fdabe1b9299681eb7271befdf4c17 /
+  af48e9b95cccbd8bcc13b2ea8ba077cdfce215d4).
+
 New in 3.0, 2015-03-24
 * [MAJOR ABI BREAKING CHANGE] Add Eigen::Ref support: now RobOptim functions
   accept blocks/segments of Eigen matrices as input.
